<resources>
    <string name="app_name">Waska Students</string>
    <string name="title_home">Beranda</string>
    <string name="title_bookmarks">Bookmark</string>
    <string name="title_submit">Submit</string>
    <string name="title_about">Tentang</string>
    <string name="placeholder_search">Cari Nama Mahasiswa</string>
    <string name="profile_picture">Foto Profil</string>
    <string name="student_name">Nama Mahasiswa</string>
    <string name="student_id">NIM Mahasiswa</string>
    <string name="back">Kembali</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="admission_year">Tahun Masuk</string>
    <string name="pddikti">PDDikti</string>
    <string name="first_semester">Awal Semester</string>
    <string name="is_graduated">Status Kelulusan</string>
    <string name="education_level">Jenjang</string>
    <string name="study">Jurusan</string>
    <string name="loading">Memuat ...</string>
    <string name="student_detail">Detail Mahasiswa</string>
    <string name="no_students_found">Mahasiswa Tidak Ditemukan</string>
    <string name="favorite">Favorit</string>
</resources>
